--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -1,16 +1,18 @@
 ## Memory map
 
-| Memory address    | Description         |
-| ----------------- | ------------------- |
-| $000000 - $07FFFF | RAM (512kB)         |
-| $800000 - $803FFF | VRAM (16kB)         |
-| $810000 - $810FFF | Text RAM (4kB)      |
-| $820000 - $8207FF | Character RAM (2kB) |
-|                   | Sprite attributes   |
-|                   | ESP UART            |
-|                   | Video registers     |
-|                   | Audio registers     |
-|                   | Interrupt registers |
+| Memory address          | Description           |
+| ----------------------- | --------------------- |
+| 0x00000000 - 0x0007FFFF | RAM (512kB)           |
+|                         | Sprite attributes     |
+|                         | ESP UART              |
+|                         | Video registers       |
+|                         | Audio registers       |
+|                         | Interrupt registers   |
+| 0xFF000000 - 0xFF000FFF | Text RAM (4kB)        |
+| 0xFF100000 - 0xFF103FFF | Character RAM (2kB)   |
+| 0xFF200000 - 0xFF203FFF | VRAM (16kB)           |
+| 0xFF300000 - 0xFF30000F | Video registers (16B) |
+| 0xFFFFF800 - 0xFFFFFFFF | Boot ROM (2kB)        |
 
 ## Sprite attributes
 
