--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -1,25 +1,51 @@
+# Aquarius32 TRM
+
 ## Memory map
 
-| Memory address          | Description           |
-| ----------------------- | --------------------- |
-| 0x00000000 - 0x0007FFFF | RAM (512kB)           |
-|                         | Sprite attributes     |
-|                         | ESP UART              |
-|                         | Video registers       |
-|                         | Audio registers       |
-|                         | Interrupt registers   |
-| 0xFF000000 - 0xFF000FFF | Text RAM (4kB)        |
-| 0xFF100000 - 0xFF103FFF | Character RAM (2kB)   |
-| 0xFF200000 - 0xFF203FFF | VRAM (16kB)           |
-| 0xFF300000 - 0xFF30000F | Video registers (16B) |
-| 0xFFFFF800 - 0xFFFFFFFF | Boot ROM (2kB)        |
+| Address                 |    Width | Description                   |
+| ----------------------- | -------: | ----------------------------- |
+| 0x00000000 - 0x0007FFFF | 8/16/32b | RAM (512kB)                   |
+| 0x00080000 - 0xFFFEFFFF |        - | -                             |
+| 0xFFFF0000 - 0xFFFF7FFF | 8/16/32b | VRAM (32kB)                   |
+| 0xFFFF8000 - 0xFFFF8FFF |    8/16b | Text RAM (4kB)                |
+| 0xFFFF9000 - 0xFFFF97FF |       8b | Character RAM (2kB)           |
+| 0xFFFF9800 - 0xFFFFEFFF |        - | -                             |
+| 0xFFFFF000              |      32b | SYS CTRL                      |
+| 0xFFFFF004              |        - | -                             |
+| 0xFFFFF008              |      32b | ESP CTRL                      |
+| 0xFFFFF00C              |      32b | ESP DATA                      |
+| 0xFFFFF010              |      32b | VCTRL                         |
+| 0xFFFFF014              |      32b | VSCRX                         |
+| 0xFFFFF018              |      32b | VSCRY                         |
+| 0xFFFFF01C              |      32b | VIRQLINE                      |
+| 0xFFFFF020              |      32b | VLINE                         |
+| 0xFFFFF024 - 0xFFFFF0FF |        - | -                             |
+| 0xFFFFF100 - 0xFFFFF1FF |      32b | Palette (4x16 entries)        |
+| 0xFFFFF200 - 0xFFFFF3FF |      32b | Sprite attributes (64x2 regs) |
+| 0xFFFFF400 - 0xFFFFF7FF |        - | -                             |
+| 0xFFFFF800 - 0xFFFFFFFF | 8/16/32b | Boot ROM (2kB)                |
+
+- TODO: Audio
 
 ## Sprite attributes
 
-- X [8:0]
-- Y [7:0]
-- Tile index [8:0]
-- Attributes
+| 31:25 | 24:16 | 15:8 | 7:0 |
+| :---: | :---: | :--: | :-: |
+|   -   |   Y   |  -   |  X  |
+
+| 31-16 |   15   |    14    |  13:12  |    11     |   10   |   9    |       8:0        |
+| :---: | :----: | :------: | :-----: | :-------: | :----: | :----: | :--------------: |
+|   -   | Enable | Priority | Palette | Height:16 | V-flip | H-flip | Tile index (8:0) |
+
+# Video RAM data
+
+## Tile map
+
+64x32 entries, each with the following format:
+
+| 15  |    14    |  13:12  | 11  |   10   |   9    |       8:0        |
+| :-: | :------: | :-----: | :-: | :----: | :----: | :--------------: |
+|  -  | Priority | Palette |  -  | V-flip | H-flip | Tile index (8:0) |
 
 ## CPU
 
