--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -2,29 +2,22 @@
 
 ## Memory map
 
-| Address                 |    Width | Description                   |
-| ----------------------- | -------: | ----------------------------- |
-| 0x00080000 - 0x7FFFFFFF |        - | -                             |
-| 0x80000000 - 0x8007FFFF | 8/16/32b | RAM (512kB)                   |
-| 0x80080000 - 0xFFFEFFFF |        - | -                             |
-| 0xFFFF0000 - 0xFFFF7FFF | 8/16/32b | VRAM (32kB)                   |
-| 0xFFFF8000 - 0xFFFF8FFF |    8/16b | Text RAM (4kB)                |
-| 0xFFFF9000 - 0xFFFF97FF |       8b | Character RAM (2kB)           |
-| 0xFFFF9800 - 0xFFFFEFFF |        - | -                             |
-| 0xFFFFF000              |      32b | SYS CTRL                      |
-| 0xFFFFF004              |        - | -                             |
-| 0xFFFFF008              |      32b | ESP CTRL                      |
-| 0xFFFFF00C              |      32b | ESP DATA                      |
-| 0xFFFFF010              |      32b | VCTRL                         |
-| 0xFFFFF014              |      32b | VSCRX                         |
-| 0xFFFFF018              |      32b | VSCRY                         |
-| 0xFFFFF01C              |      32b | VIRQLINE                      |
-| 0xFFFFF020              |      32b | VLINE                         |
-| 0xFFFFF024 - 0xFFFFF0FF |        - | -                             |
-| 0xFFFFF100 - 0xFFFFF1FF |      32b | Palette (4x16 entries)        |
-| 0xFFFFF200 - 0xFFFFF3FF |      32b | Sprite attributes (64x2 regs) |
-| 0xFFFFF400 - 0xFFFFF7FF |        - | -                             |
-| 0xFFFFF800 - 0xFFFFFFFF | 8/16/32b | Boot ROM (2kB)                |
+| Address                 |    Width | Description            |
+| ----------------------- | -------: | ---------------------- |
+| 0x80000000 - 0x8007FFFF | 8/16/32b | RAM (512kB)            |
+| 0xFF000000 - 0xFF000FFF |    8/16b | Text RAM (4kB)         |
+| 0xFF100000 - 0xFF1007FF |       8b | Character RAM (2kB)    |
+| 0xFF200000 - 0xFF203FFF | 8/16/32b | VRAM (16kB)            |
+| 0xFF300000 -            |          | Sprite attributes      |
+| 0xFF400000 - 0xFF40007F |      16b | Palette (4x16 entries) |
+| 0xFF500000              |      32b | ESP CTRL               |
+| 0xFF500004              |      32b | ESP DATA               |
+| 0xFF500008              |      32b | VCTRL                  |
+| 0xFF50000C              |      32b | VSCRX                  |
+| 0xFF500010              |      32b | VSCRY                  |
+| 0xFF500014              |      32b | VLINE                  |
+| 0xFF500018              |      32b | VIRQLINE               |
+| 0xFFFFF800 - 0xFFFFFFFF | 8/16/32b | Boot ROM (2kB)         |
 
 - TODO: Audio
 
