Updating memory map.

--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -2,22 +2,30 @@
 
 ## Memory map
 
-| Address                 |    Width | Description            |
-| ----------------------- | -------: | ---------------------- |
-| 0x80000000 - 0x8007FFFF | 8/16/32b | RAM (512kB)            |
-| 0xFF000000 - 0xFF000FFF |    8/16b | Text RAM (4kB)         |
-| 0xFF100000 - 0xFF1007FF |       8b | Character RAM (2kB)    |
-| 0xFF200000 - 0xFF203FFF | 8/16/32b | VRAM (16kB)            |
-| 0xFF300000 -            |          | Sprite attributes      |
-| 0xFF400000 - 0xFF40007F |      16b | Palette (4x16 entries) |
-| 0xFF500000              |      32b | ESP CTRL               |
-| 0xFF500004              |      32b | ESP DATA               |
-| 0xFF500008              |      32b | VCTRL                  |
-| 0xFF50000C              |      32b | VSCRX                  |
-| 0xFF500010              |      32b | VSCRY                  |
-| 0xFF500014              |      32b | VLINE                  |
-| 0xFF500018              |      32b | VIRQLINE               |
-| 0xFFFFF800 - 0xFFFFFFFF | 8/16/32b | Boot ROM (2kB)         |
+| Address       |    Width | Description                  |
+| ------------- | -------: | ---------------------------- |
+| 00000 - 007FF | 8/16/32b | Boot ROM (2kB)               |
+| 00800 - 01FFF |        - | -                            |
+| 02000         |      32b | ESP CTRL                     |
+| 02004         |      32b | ESP DATA                     |
+| 02008         |      32b | VCTRL                        |
+| 0200C         |      32b | VSCRX                        |
+| 02010         |      32b | VSCRY                        |
+| 02014         |      32b | VLINE                        |
+| 02018         |      32b | VIRQLINE                     |
+| 0201C         |      32b | KEYBUF                       |
+| 02020 - 02FFF |        - | -                            |
+| 03000 - 031FF |      32b | Sprite attributes (64x2x32b) |
+| 03200 - 03FFF |        - | -                            |
+| 04000 - 0407F |      16b | Palette (4x16 entries)       |
+| 04080 - 04FFF |        - | -                            |
+| 05000 - 057FF |       8b | Character RAM (2kB)          |
+| 05800 - 05FFF |        - | -                            |
+| 06000 - 06FFF |    8/16b | Text RAM (4kB)               |
+| 07000 - 07FFF |        - | -                            |
+| 08000 - 0FFFF | 8/16/32b | VRAM (32kB)                  |
+| 10000 - 7FFFF |        - | -                            |
+| 80000 - FFFFF | 8/16/32b | RAM (512kB)                  |
 
 - TODO: Audio
 
