--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -35,19 +35,26 @@
 | :---: | :---: | :--: | :-: |
 |   -   |   Y   |  -   |  X  |
 
-| 31-16 |   15   |    14    |  13:12  |    11     |   10   |   9    |       8:0        |
-| :---: | :----: | :------: | :-----: | :-------: | :----: | :----: | :--------------: |
-|   -   | Enable | Priority | Palette | Height:16 | V-flip | H-flip | Tile index (8:0) |
+| 31-16 |   15   |    14    |  13:12  |    11     |   10   |   9    |           8:0           |
+| :---: | :----: | :------: | :-----: | :-------: | :----: | :----: | :---------------------: |
+|   -   | Enable | Priority | Palette | Height:16 | V-flip | H-flip | Tile index (+512) (8:0) |
 
 # Video RAM data
+
+| Address   | Description                                     |
+| --------- | ----------------------------------------------- |
+| 0000-7FFF | Tile data for tile map (overlaps with tile map) |
+| 4000-7FFF | Tile data for sprites (overlaps with tile map)  |
+| 0000-7CFF | Bitmap data                                     |
+| 7000-7FFF | Tile map                                        |
 
 ## Tile map
 
 64x32 entries, each with the following format:
 
-| 15  |    14    |  13:12  | 11  |   10   |   9    |       8:0        |
-| :-: | :------: | :-----: | :-: | :----: | :----: | :--------------: |
-|  -  | Priority | Palette |  -  | V-flip | H-flip | Tile index (8:0) |
+| 15  |    14    |  13:12  |       11       |   10   |   9    |       8:0        |
+| :-: | :------: | :-----: | :------------: | :----: | :----: | :--------------: |
+|  -  | Priority | Palette | Tile index (9) | V-flip | H-flip | Tile index (8:0) |
 
 ## CPU
 
