Support for command line arguments.

--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -24,7 +24,8 @@
 | 06000 - 06FFF |    8/16b | Text RAM (4kB)               |
 | 07000 - 07FFF |        - | -                            |
 | 08000 - 0FFFF | 8/16/32b | VRAM (32kB)                  |
-| 10000 - 7FFFF |        - | -                            |
+| 10000 - 1FFFF | 8/16/32b | VRAM 4bpp addressable (64kB) |
+| 20000 - 7FFFF |        - | -                            |
 | 80000 - FFFFF | 8/16/32b | RAM (512kB)                  |
 
 - TODO: Audio
