--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -26,36 +26,45 @@
 | 08000 - 0FFFF | 8/16/32b | VRAM (32kB)                  |
 | 10000 - 1FFFF | 8/16/32b | VRAM 4bpp addressable (64kB) |
 | 20000 - 7FFFF |        - | -                            |
-| 80000 - FFFFF | 8/16/32b | RAM (512kB)                  |
+| 80000 - FFFFF | 8/16/32b | RAM (512kB) (cached)         |
 
 - TODO: Audio
 
+## VCTRL
+
+| 31-6 |   5    |            4             |   3    |       2       |       1        |    0    |
+| :--: | :----: | :----------------------: | :----: | :-----------: | :------------: | :-----: |
+|  -   | Spr_en | Gfx_mode: bm(0), tile(1) | Gfx_en | Text_priority | Text_80columns | Text_en |
+
 ## Sprite attributes
+
+Even addresses:
 
 | 31:25 | 24:16 | 15:8 | 7:0 |
 | :---: | :---: | :--: | :-: |
 |   -   |   Y   |  -   |  X  |
 
-| 31-16 |   15   |    14    |  13:12  |    11     |   10   |   9    |           8:0           |
-| :---: | :----: | :------: | :-----: | :-------: | :----: | :----: | :---------------------: |
-|   -   | Enable | Priority | Palette | Height:16 | V-flip | H-flip | Tile index (+512) (8:0) |
+Odd addresses:
+
+| 31-16 |    15    |  14:13  |   12   |   11   |    10     |       9:0        |
+| :---: | :------: | :-----: | :----: | :----: | :-------: | :--------------: |
+|   -   | Priority | Palette | V-flip | H-flip | Height:16 | Tile index (9:0) |
 
 # Video RAM data
 
-| Address   | Description                                     |
-| --------- | ----------------------------------------------- |
-| 0000-7FFF | Tile data for tile map (overlaps with tile map) |
-| 4000-7FFF | Tile data for sprites (overlaps with tile map)  |
-| 0000-7CFF | Bitmap data                                     |
-| 7000-7FFF | Tile map                                        |
+| Address   | Description                        |
+| --------- | ---------------------------------- |
+| 0000-7FFF | Tile data (overlaps with tile map) |
+| 0000-7CFF | Bitmap data                        |
+| 7000-7FFF | Tile map                           |
 
 ## Tile map
 
 64x32 entries, each with the following format:
 
-| 15  |    14    |  13:12  |       11       |   10   |   9    |       8:0        |
-| :-: | :------: | :-----: | :------------: | :----: | :----: | :--------------: |
-|  -  | Priority | Palette | Tile index (9) | V-flip | H-flip | Tile index (8:0) |
+|    15    |  14:13  |   12   |   11   | 10  |       9:0        |
+| :------: | :-----: | :----: | :----: | :-: | :--------------: |
+| Priority | Palette | V-flip | H-flip |  -  | Tile index (9:0) |
 
 ## CPU
 
