Working on FM synth.

--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -14,7 +14,8 @@
 | 02014         |      32b | VLINE                        |
 | 02018         |      32b | VIRQLINE                     |
 | 0201C         |      32b | KEYBUF                       |
-| 02020 - 02FFF |        - | -                            |
+| 02020 - 027FF |        - | -                            |
+| 02800 - 02FFF |      32b | FM synthesizer               |
 | 03000 - 031FF |      32b | Sprite attributes (64x2x32b) |
 | 03200 - 03FFF |        - | -                            |
 | 04000 - 0407F |      16b | Palette (4x16 entries)       |
