Working on FM synth

--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -65,6 +65,78 @@ Odd addresses:
 | :------: | :-----: | :----: | :----: | :-: | :--------------: |
 | Priority | Palette | V-flip | H-flip |  -  | Tile index (9:0) |
 
+# FM synthesizer
+
+### Register 0
+
+This register indicates what channel pairs are used as 4-channel operator.
+
+| 31:16 |    15    |    14    |    13    |    12    |    11    |    10    |    9     |    8     |    7     |    6     |    5     |   4    |   3    |   2    |   1    |   0    |
+| :---: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :----: | :----: | :----: | :----: | :----: |
+|   -   | CH 31/30 | CH 29/28 | CH 27/26 | CH 25/24 | CH 23/22 | CH 21/20 | CH 19/18 | CH 17/16 | CH 15/14 | CH 13/12 | CH 11/10 | CH 9/8 | CH 7/6 | CH 5/4 | CH 3/2 | CH 1/0 |
+
+### Register 1
+
+| 31:15 | 14  | 13:8 |  7  |  6  | 5:0 |
+| :---: | :-: | :--: | :-: | :-: | :-: |
+|   -   | NTS |  -   | DAM | DVB |  -  |
+
+| Name | Description                         |
+| ---- | ----------------------------------- |
+| NTS  | Note sel (keyboard split selection) |
+| DAM  | Amplitude modulation depth          |
+| DVB  | Vibrato depth                       |
+
+### Register 2
+
+Each bit in this register controls the Key-on signal of each channel
+
+### Registers 96-127 Channel attributes
+
+| 31:22 | 21  | 20  | 19:17 | 16  | 15:13 | 12:10 | 9:0  |
+| :---: | :-: | :-: | :---: | :-: | :---: | :---: | :--: |
+|   -   | CHB | CHA |  FB   | ALG |   -   | BLOCK | FNUM |
+
+| Name  | Description                                    |
+| ----- | ---------------------------------------------- |
+| CHB   | Mix to channel B                               |
+| CHA   | Mix to channel A                               |
+| FB    | Modulation depth for slot 1 FM feed back (0-7) |
+| ALG   | Operation connection (algorithm)               |
+| KON   | Key on                                         |
+| BLOCK | Octave (0-7)                                   |
+| FNUM  | Frequency number (10 bit)                      |
+
+### Registers 128-191 Operator attributes 0
+
+| 31  | 30  | 29  | 28  | 27:24 | 23:22 | 21:16 | 15:8 | 11:8 | 7:4 | 3:0 |
+| :-: | :-: | :-: | :-: | :---: | :---: | :---: | :--: | :--: | :-: | --- |
+| AM  | VIB | SUS | KSR | MULT  |  KSL  |  TL   |  AR  |  DR  | SL  | RR  |
+
+| Name | Description                                   |
+| ---- | --------------------------------------------- |
+| AM   | Amplitude modulation (Tremelo)                |
+| VIB  | Vibrato                                       |
+| SUS  | 0:Skip sustain phase, 1:Sustain until key off |
+| KSR  | Key scale rate                                |
+| MULT | Frequency data multiplier (0-15)              |
+| KSL  | Key scale level (0-3)                         |
+| TL   | Total level (0-63)                            |
+| AR   | Attack Rate (0-15)                            |
+| DR   | Decay Rate (0-15)                             |
+| SL   | Sustain Level (0-15)                          |
+| RR   | Release Rate (0-15)                           |
+
+### Registers 192-255 Operator attributes 1
+
+| 31:3 | 2:0 |
+| :--: | --- |
+|  -   | WS  |
+
+| Name | Description       |
+| ---- | ----------------- |
+| WS   | Wave select (0-7) |
+
 ## CPU
 
 RISC-V
