--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -77,15 +77,14 @@ This register indicates what channel pairs are used as 4-channel operator.
 
 ### Register 1
 
-| 31:15 | 14  | 13:8 |  7  |  6  | 5:0 |
-| :---: | :-: | :--: | :-: | :-: | :-: |
-|   -   | NTS |  -   | DAM | DVB |  -  |
+| 31:8 |  7  |  6  | 5:0 |
+| :--: | :-: | :-: | :-: |
+|  -   | DAM | DVB |  -  |
 
-| Name | Description                         |
-| ---- | ----------------------------------- |
-| NTS  | Note sel (keyboard split selection) |
-| DAM  | Amplitude modulation depth          |
-| DVB  | Vibrato depth                       |
+| Name | Description                |
+| ---- | -------------------------- |
+| DAM  | Amplitude modulation depth |
+| DVB  | Vibrato depth              |
 
 ### Register 2
 
