--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -92,14 +92,13 @@ Each bit in this register controls the Key-on signal of each channel
 
 ### Registers 96-127 Channel attributes
 
-| 31:22 | 21  | 20  | 19:17 | 16  | 15:13 | 12:10 | 9:0  |
-| :---: | :-: | :-: | :---: | :-: | :---: | :---: | :--: |
-|   -   | CHB | CHA |  FB   | ALG |   -   | BLOCK | FNUM |
+| 31:27 | 26:20 | 19:17 | 16  | 15:13 | 12:10 | 9:0  |
+| :---: | :---: | :---: | :-: | :---: | :---: | :--: |
+|   -   |  PAN  |  FB   | ALG |   -   | BLOCK | FNUM |
 
 | Name  | Description                                    |
 | ----- | ---------------------------------------------- |
-| CHB   | Mix to channel B                               |
-| CHA   | Mix to channel A                               |
+| PAN   | 0:No Audio, 1:Left, 64:Center, 127:Right       |
 | FB    | Modulation depth for slot 1 FM feed back (0-7) |
 | ALG   | Operation connection (algorithm)               |
 | KON   | Key on                                         |
