--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -14,7 +14,8 @@
 | 02014         |      32b | VLINE                        |
 | 02018         |      32b | VIRQLINE                     |
 | 0201C         |      32b | KEYBUF                       |
-| 02020 - 027FF |        - | -                            |
+| 02020 - 023FF |        - | -                            |
+| 02400 - 027FF |      32b | PCM playback                 |
 | 02800 - 02FFF |      32b | FM synthesizer               |
 | 03000 - 031FF |      32b | Sprite attributes (64x2x32b) |
 | 03200 - 03FFF |        - | -                            |
@@ -28,6 +29,20 @@
 | 10000 - 1FFFF | 8/16/32b | VRAM 4bpp addressable (64kB) |
 | 20000 - 7FFFF |        - | -                            |
 | 80000 - FFFFF | 8/16/32b | RAM (512kB) (cached)         |
+
+## Interrupts
+
+The interrupts can be controlled via the RISC-V MIE (Machine Interrupt Enable) and MIP (Machine Interrupt Pending) CSR registers.
+
+| Interrupt number | Description                          |
+| ---------------: | ------------------------------------ |
+|           0 - 15 | -                                    |
+|               16 | V-blank interrupt                    |
+|               17 | Line interrupt                       |
+|               18 | PCM FIFO threshold interrupt         |
+|               19 | Keybuf FIFO not empty interrupt      |
+|               20 | ESP UART RX FIFO not empty interrupt |
+|          21 - 31 | -                                    |
 
 ## VCTRL
 
@@ -64,6 +79,60 @@ Odd addresses:
 |    15    |  14:13  |   12   |   11   | 10  |       9:0        |
 | :------: | :-----: | :----: | :----: | :-: | :--------------: |
 | Priority | Palette | V-flip | H-flip |  -  | Tile index (9:0) |
+
+# PCM playback
+
+### Register 0 status register
+
+This register reflects the number of samples currently in the FIFO buffer. The FIFO buffer can hold a maximum of 1023 16-bit stereo samples.
+
+| 31:10 |      9:0       |
+| :---: | :------------: |
+|   -   | FIFO count (R) |
+
+Writing to this register will reset the FIFO buffer and thus flush any samples still present.
+
+### Register 1 FIFO control register
+
+| 31:10 |          9:0           |
+| :---: | :--------------------: |
+|   -   | FIFO IRQ treshold (RW) |
+
+As long as _FIFO count_ is lower than _FIFO IRQ treshold_, an interrupt is generated.
+To clear the interrupt, first fill the FIFO buffer above the threshold and then clear the CPU interrupt.
+
+### Register 2 Rate control register
+
+This register is used to control the playback rate or sample rate.
+
+| 31:12 | 11:0 |
+| :---: | :--: |
+|   -   | Rate |
+
+The formulas to calculate the sample rate ($f_s$) in Hz from the **_Rate_** register value and vice versa:
+
+$$f_s = \frac{Rate \times 25175000}{2^{20}} \qquad Rate = \frac{f_s \times 2^{20}}{25175000}$$
+
+Some commonly used sample rates and their corresponding rate value:
+
+| Desired sample rate | Closest rate | Actual sample rate |  Error |
+| ------------------: | -----------: | -----------------: | -----: |
+|             8000 Hz |          333 |            7994 Hz | 0.075% |
+|            11025 Hz |          459 |           11020 Hz | 0.045% |
+|            22050 Hz |          918 |           22040 Hz | 0.045% |
+|            44100 Hz |         1837 |           44104 Hz | 0.009% |
+|            48000 Hz |         1999 |           47993 Hz | 0.015% |
+
+When starting playback, rate can be set to 0 at first, then the FIFO can be filled to a sufficient level and then RATE can be set to the actual playback rate. This helps prevent underruns on the first samples.
+
+### Register 3 Sample data
+
+This write-only register is used to write sample data into the FIFO buffer.
+Sample data should be in signed 16-bit format.
+
+|    31:16    |    15:0    |
+| :---------: | :--------: |
+| Right audio | Left audio |
 
 # FM synthesizer
 
