--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -44,6 +44,18 @@ The interrupts can be controlled via the RISC-V MIE (Machine Interrupt Enable) a
 |               20 | ESP UART RX FIFO not empty interrupt |
 |          21 - 31 | -                                    |
 
+## ESP CTRL
+
+| 31:5 |            4            |            3            |  2  |      1      |        0         |
+| :--: | :---------------------: | :---------------------: | :-: | :---------: | :--------------: |
+|  -   | RX FIFO overflow (R/WC) | RX framing error (R/WC) |  -  | TX full (R) | RX not empty (R) |
+
+## ESP DATA
+
+| 31:9 |        8         | 7:0  |
+| :--: | :--------------: | :--: |
+|  -   | Start of message | Data |
+
 ## VCTRL
 
 | 31:6 |   5    |            4             |   3    |       2       |       1        |    0    |
