Adding cycle and time counters.

--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -14,7 +14,12 @@
 | 02014         |      32b | VLINE                        |
 | 02018         |      32b | VIRQLINE                     |
 | 0201C         |      32b | KEYBUF                       |
-| 02020 - 023FF |        - | -                            |
+| 02020 - 0207C |        - | -                            |
+| 02080         |      32b | RISC-V mtime register        |
+| 02084         |      32b | RISC-V mtimeh register       |
+| 02088         |      32b | RISC-V mtimecmp register     |
+| 0208C         |      32b | RISC-V mtimecmph register    |
+| 02090 - 023FF |        - | -                            |
 | 02400 - 027FF |      32b | PCM playback                 |
 | 02800 - 02FFF |      32b | FM synthesizer               |
 | 03000 - 031FF |      32b | Sprite attributes (64x2x32b) |
@@ -30,19 +35,48 @@
 | 20000 - 7FFFF |        - | -                            |
 | 80000 - FFFFF | 8/16/32b | RAM (512kB) (cached)         |
 
+## CPU features
+
+- RISC-V RV32IM core (hardware multiplier / divider)
+- zicsr extension
+- Only machine mode is available
+
+### Implemented CSRs
+
+| Code  | Name     | Description                                                |
+| ----- | -------- | ---------------------------------------------------------- |
+| 0x300 | mstatus  | Machine status register                                    |
+| 0x304 | mie      | Machine interrupt-enable register                          |
+| 0x305 | mtvec    | Machine trap-handler base address                          |
+| 0x340 | mscratch | Machine scratch register                                   |
+| 0x341 | mepc     | Machine exception program counter                          |
+| 0x342 | mcause   | Machine trap cause                                         |
+| 0x343 | mtval    | Machine bad address or instruction                         |
+| 0x344 | mip      | Machine interrupt pending                                  |
+| 0xB00 | mcycle   | Machine cycle counter                                      |
+| 0xB80 | mcycleh  | Upper 32 bits of mcycle                                    |
+| 0xC00 | cycle    | Cycle counter (same as cycle) (incrementing at 25.175MHz)  |
+| 0xC80 | cycleh   | Upper 32 bits of cycle (same as cycleh)                    |
+| 0xC01 | time     | Machine time counter (same as mtime at address 0x02080)    |
+| 0xC81 | timeh    | Upper 32 bits of mtime (same as mtimeh at address 0x02084) |
+
 ## Interrupts
 
 The interrupts can be controlled via the RISC-V MIE (Machine Interrupt Enable) and MIP (Machine Interrupt Pending) CSR registers.
 
 | Interrupt number | Description                          |
 | ---------------: | ------------------------------------ |
-|           0 - 15 | -                                    |
+|            0 - 6 | -                                    |
+|                7 | Machine timer interrupt              |
+|           8 - 15 | -                                    |
 |               16 | V-blank interrupt                    |
 |               17 | Line interrupt                       |
 |               18 | PCM FIFO threshold interrupt         |
 |               19 | Keybuf FIFO not empty interrupt      |
 |               20 | ESP UART RX FIFO not empty interrupt |
 |          21 - 31 | -                                    |
+
+Interrupts 16 and 17 are latching, which means they have to cleared by clearing the bit in the MIP register. The other interrupts will be automatically cleared in the MIP register when the interrupt conditional no longer is present.
 
 ## ESP CTRL
 
