--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -6,7 +6,7 @@
 | ------------- | -------: | ---------------------------- |
 | 00000 - 007FF | 8/16/32b | Boot ROM (2kB)               |
 | 00800 - 01FFF |        - | -                            |
-| 02000         |      32b | ESP CTRL                     |
+| 02000         |      32b | ESP STATUS                   |
 | 02004         |      32b | ESP DATA                     |
 | 02008         |      32b | VCTRL                        |
 | 0200C         |      32b | VSCRX                        |
@@ -40,6 +40,7 @@
 - RISC-V RV32IM core (hardware multiplier / divider)
 - zicsr extension
 - Only machine mode is available
+- RAM is accessed via an 8KB direct mapped cache with single word cache lines
 
 ### Implemented CSRs
 
@@ -78,11 +79,11 @@ The interrupts can be controlled via the RISC-V MIE (Machine Interrupt Enable) a
 
 Interrupts 16 and 17 are latching, which means they have to cleared by clearing the bit in the MIP register. The other interrupts will be automatically cleared in the MIP register when the interrupt conditional no longer is present.
 
-## ESP CTRL
+## ESP STATUS
 
-| 31:5 |            4            |            3            |  2  |      1      |        0         |
-| :--: | :---------------------: | :---------------------: | :-: | :---------: | :--------------: |
-|  -   | RX FIFO overflow (R/WC) | RX framing error (R/WC) |  -  | TX full (R) | RX not empty (R) |
+| 31:2 |      1      |        0         |
+| :--: | :---------: | :--------------: |
+|  -   | TX full (R) | RX not empty (R) |
 
 ## ESP DATA
 
@@ -182,7 +183,7 @@ Sample data should be in signed 16-bit format.
 
 # FM synthesizer
 
-### Register 0
+### Register 0 OP_4CH
 
 This register indicates what channel pairs are used as 4-channel operator.
 
@@ -190,7 +191,7 @@ This register indicates what channel pairs are used as 4-channel operator.
 | :---: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :----: | :----: | :----: | :----: | :----: |
 |   -   | CH 31/30 | CH 29/28 | CH 27/26 | CH 25/24 | CH 23/22 | CH 21/20 | CH 19/18 | CH 17/16 | CH 15/14 | CH 13/12 | CH 11/10 | CH 9/8 | CH 7/6 | CH 5/4 | CH 3/2 | CH 1/0 |
 
-### Register 1
+### Register 1 GLOBAL
 
 | 31:8 |  7  |  6  | 5:0 |
 | :--: | :-: | :-: | :-: |
@@ -201,7 +202,7 @@ This register indicates what channel pairs are used as 4-channel operator.
 | DAM  | Amplitude modulation depth |
 | DVB  | Vibrato depth              |
 
-### Register 2
+### Register 2 KEY_ON
 
 Each bit in this register controls the Key-on signal of each channel
 
@@ -249,8 +250,3 @@ Each bit in this register controls the Key-on signal of each channel
 | Name | Description       |
 | ---- | ----------------- |
 | WS   | Wave select (0-7) |
-
-## CPU
-
-RISC-V
-RAM cache
