--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -2,38 +2,37 @@
 
 ## Memory map
 
-| Address       |    Width | Description                  |
-| ------------- | -------: | ---------------------------- |
-| 00000 - 007FF | 8/16/32b | Boot ROM (2kB)               |
-| 00800 - 01FFF |        - | -                            |
-| 02000         |      32b | ESP STATUS                   |
-| 02004         |      32b | ESP DATA                     |
-| 02008         |      32b | VCTRL                        |
-| 0200C         |      32b | VSCRX                        |
-| 02010         |      32b | VSCRY                        |
-| 02014         |      32b | VLINE                        |
-| 02018         |      32b | VIRQLINE                     |
-| 0201C         |      32b | KEYBUF                       |
-| 02020 - 0207C |        - | -                            |
-| 02080         |      32b | RISC-V mtime register        |
-| 02084         |      32b | RISC-V mtimeh register       |
-| 02088         |      32b | RISC-V mtimecmp register     |
-| 0208C         |      32b | RISC-V mtimecmph register    |
-| 02090 - 023FF |        - | -                            |
-| 02400 - 027FF |      32b | PCM playback                 |
-| 02800 - 02FFF |      32b | FM synthesizer               |
-| 03000 - 031FF |      32b | Sprite attributes (64x2x32b) |
-| 03200 - 03FFF |        - | -                            |
-| 04000 - 0407F |      16b | Palette (4x16 entries)       |
-| 04080 - 04FFF |        - | -                            |
-| 05000 - 057FF |       8b | Character RAM (2kB)          |
-| 05800 - 05FFF |        - | -                            |
-| 06000 - 06FFF |    8/16b | Text RAM (4kB)               |
-| 07000 - 07FFF |        - | -                            |
-| 08000 - 0FFFF | 8/16/32b | VRAM (32kB)                  |
-| 10000 - 1FFFF | 8/16/32b | VRAM 4bpp addressable (64kB) |
-| 20000 - 7FFFF |        - | -                            |
-| 80000 - FFFFF | 8/16/32b | RAM (512kB) (cached)         |
+| Address       |    Width | Description                       |
+| ------------- | -------: | --------------------------------- |
+| 00000 - 007FF | 8/16/32b | Boot ROM (2kB)                    |
+| 00800 - 01FFF |        - | -                                 |
+| 02000         |      32b | ESP STATUS                        |
+| 02004         |      32b | ESP DATA                          |
+| 02008         |      32b | VCTRL                             |
+| 0200C         |      32b | VSCRX                             |
+| 02010         |      32b | VSCRY                             |
+| 02014         |      32b | VLINE                             |
+| 02018         |      32b | VIRQLINE                          |
+| 0201C         |      32b | KEYBUF                            |
+| 02020 - 0207C |        - | -                                 |
+| 02080         |      32b | RISC-V mtime register             |
+| 02084         |      32b | RISC-V mtimeh register            |
+| 02088         |      32b | RISC-V mtimecmp register          |
+| 0208C         |      32b | RISC-V mtimecmph register         |
+| 02090 - 023FF |        - | -                                 |
+| 02400 - 027FF |      32b | PCM playback                      |
+| 02800 - 02FFF |      32b | FM synthesizer                    |
+| 03000 - 031FF |      32b | Sprite attributes (64x2x32b)      |
+| 03200 - 03FFF |        - | -                                 |
+| 04000 - 0407F |      16b | Palette (4x16 entries)            |
+| 04080 - 04FFF |        - | -                                 |
+| 05000 - 057FF |       8b | Character RAM (2kB)               |
+| 05800 - 05FFF |        - | -                                 |
+| 06000 - 07FFF | 8/16/32b | Text RAM (8kB)                    |
+| 08000 - 0FFFF | 8/16/32b | Video RAM (32kB)                  |
+| 10000 - 1FFFF | 8/16/32b | Video RAM 4bpp addressable (64kB) |
+| 20000 - 7FFFF |        - | -                                 |
+| 80000 - FFFFF | 8/16/32b | RAM (512kB) (cached)              |
 
 ## CPU features
 
