--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -22,7 +22,8 @@
 | 02090 - 023FF |        - | -                                 |
 | 02400 - 027FF |      32b | PCM playback                      |
 | 02800 - 02FFF |      32b | FM synthesizer                    |
-| 03000 - 031FF |      32b | Sprite attributes (64x2x32b)      |
+| 03000 - 030FF |      32b | Sprite attributes (64x32b)        |
+| 03100 - 031FF |      32b | Sprite positions (64x32b)         |
 | 03200 - 03FFF |        - | -                                 |
 | 04000 - 0407F |      16b | Palette (4x16 entries)            |
 | 04080 - 04FFF |        - | -                                 |
@@ -98,17 +99,15 @@ Interrupts 16 and 17 are latching, which means they have to cleared by clearing 
 
 ## Sprite attributes
 
-Even addresses:
+| 31:16 |    15    |  14:13  |   12   |   11   |    10     |       9:0        |
+| :---: | :------: | :-----: | :----: | :----: | :-------: | :--------------: |
+|   -   | Priority | Palette | V-flip | H-flip | Height:16 | Tile index (9:0) |
+
+## Sprite positions
 
 | 31:25 | 24:16 | 15:8 | 7:0 |
 | :---: | :---: | :--: | :-: |
 |   -   |   Y   |  -   |  X  |
-
-Odd addresses:
-
-| 31:16 |    15    |  14:13  |   12   |   11   |    10     |       9:0        |
-| :---: | :------: | :-----: | :----: | :----: | :-------: | :--------------: |
-|   -   | Priority | Palette | V-flip | H-flip | Height:16 | Tile index (9:0) |
 
 # Video RAM data
 
